--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,7 @@ dd {
 
 .container {
     height: 100vh;
-    background-image: url(../images/calvin-hobbes.jpg);
+    background-image: url(images/calvin-hobbes.jpg);
     background-position: center bottom;
     background-repeat: no-repeat;
     background-size: cover;
